--- a/src/assets/projects_list.json
+++ b/src/assets/projects_list.json
@@ -1,26 +1,52 @@
 [
   {
     "title": "Moodmancer",
-    "link": "",
+    "link": "moodmancer",
     "description": "Moodmancer is a full-featured mood and habit tracker web application that uses supervised machine learning and data visualization to understand the habits and outside factors that affect users' moods.\nMoodmancer was built on Node.js with 3 other developers: Dani Jordan, Torri Raines and Halim Chu. We used Brain.js to create a neural network that takes in a user's activities for the day and returns a prediction for their moods, and Victory Charts to view moods and habits over time.",
-    "imageId": "0"
+    "imageId": "0",
+    "technologies": [
+      "Brain.js",
+      "Node.JS / Express",
+      "PostgreSQL",
+      "React",
+      "Redux",
+      "Victory Charts"
+    ]
   },
   {
     "title": "SalarySim",
-    "link": "",
+    "link": "salarysim",
     "description": "Cauri Guide is a web app to promote New York City's Black and Latinx-owned businesses. I built the site with Wordpress, using Beaver Builder, a drag-and-drop plugin that allowed me to create the design of the whole site. I also used Geodirectory, a tool to list places and locate them on a map, interacting with the Google Maps API.",
-    "imageId": "1"
+    "imageId": "1",
+    "technologies": [
+      "Node.JS / Express",
+      "PostgreSQL",
+      "React",
+      "Redux",
+      "Victory Charts"
+    ]
   },
   {
     "title": "Cauri Guide",
-    "link": "",
+    "link": "cauriguide",
     "description": "Cauri Guide is a web app to promote New York City's Black and Latinx-owned businesses. I built the site with Wordpress, using Beaver Builder, a drag-and-drop plugin that allowed me to create the design of the whole site. I also used Geodirectory, a tool to list places and locate them on a map, interacting with the Google Maps API.",
-    "imageId": "2"
+    "imageId": "2",
+    "technologies": [
+      "Wordpress",
+      "Geodirectory Plugin",
+      "Beaver Builder Plugin", 
+      "Adobe Illustrator",
+      "Adobe Photoshop"
+    ]
   },
   {
     "title": "LMCC",
-    "link": "",
+    "link": "lmcc",
     "description": "A website built for Lower Manhattan Cultural Council (LMCC) to present the company and share resources. The previous website had not been answering the stakeholders' needs, so over a period of 6 months, I was tasked with building a new site architecture, design and aesthetic to respond to all users' expectations.\nThe site was built on Wordpress with an eye towards maintainability, using Beaver Builder to fully control the design of the site. It is also mobile-responsive, with some adaptive elements (such as a hamburger menu), and it is navigable despite its dozens of pages thanks to navigation breadcrumbs.",
-    "imageId": "3"
+    "imageId": "3",
+    "technologies": [
+      "Wordpress",
+      "Beaver Builder Plugin"
+    ]
   }
 ]
